# moonboard-grader

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  example.json
.claude/: settings.local.json
analysis/: .gitignore  generate_hold_stats.py
aspire-app/: .gitignore  apphost.cs  apphost.run.json
backend/: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  routes.py
backend/app/api/routes/: __init__.py  analytics.py  board_setups.py  generation.py  health.py  prediction.py  problems.py
backend/app/core/: __init__.py  config.py  logging.py  telemetry.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  generator_service.py  predictor_service.py  problem_service.py  service_registry.py
backend/models/: README.md
backend/tests/: __init__.py  conftest.py  test_api.py  test_board_setups.py  test_models.py  test_problem_service.py  test_service.py
beta-classifier/: .gitignore  README.md  config.yaml  config_debug.yaml  main.py  pyproject.toml  pytest.ini
beta-classifier/src/: __init__.py  dataset.py  evaluator.py  model.py  predictor.py  trainer.py
beta-classifier/tests/: __init__.py  test_dataset.py  test_model.py  test_predictor.py
beta-solver/BetaSolver/: .gitignore  AGENTS.md  BetaSolver.slnx
beta-solver/BetaSolver/BetaSolver.Api/: BetaSolver.Api.csproj  BetaSolver.Api.http  Program.cs
beta-solver/BetaSolver/BetaSolver.Cli/: BetaSolver.Cli.csproj  Program.cs
beta-solver/BetaSolver/BetaSolver.Core.UnitTests/: BetaSolver.Core.UnitTests.csproj
classifier/: .gitignore  AGENTS.md  README.md  USAGE.md  config.yaml  config_filtered.yaml  config_improved.yaml  main.py  pyproject.toml  requirements.txt  setup.py  spec.md
classifier/docs/: changelog.md
classifier/src/: __init__.py  advanced_augmentation.py  advanced_models.py  augmentation.py  data_splitter.py  dataset.py  evaluator.py  losses.py  models.py  predictor.py  split_validation.py  trainer.py
classifier/src/cli/: __init__.py  commands.py  evaluate.py  predict.py  train.py  utils.py
classifier/tests/: __init__.py  test_data_splitter.py  test_dataset.py  test_evaluator.py  test_filtering_integration.py  test_grid_builder.py  test_losses.py  test_main.py  test_models.py  test_position_parser.py  test_predictor.py  test_trainer.py
config/: board_setups.json
docs/: architecture.md  features.md  frontend-otel-aspire-setup.md
docs/adr/: 20260601_multi-board-config-and-service-registry.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: classifier-moonboard-core-review-findings.md  generator-grade-conditioning.md  generator-latent-capacity.md  generator-moonboard-core-review-findings.md  generator-recon-loss-class-imbalance.md
docs/exec-plans/completed/: multi-board-backend.md  multi-board-frontend.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  telemetry.ts  vite-env.d.ts
frontend/src/components/: AnalyticsMode.tsx  AttentionHeatmap.tsx  BenchmarkFilter.tsx  BetaToggle.tsx  BoardCanvas.tsx  BoardLegend.tsx  (+20 more)
generator/: .gitignore  README.md  config.yaml  config_6a_only.yaml  main.py  pyproject.toml  requirements.txt  setup.py  spec.md
generator/models/: .gitkeep
generator/src/: __init__.py  checkpoint_compat.py  dataset.py  generator.py  label_space.py  vae.py  vae_trainer.py
generator/src/evaluator/: __init__.py  classifier_check.py  diversity.py  grade_conditioning.py  latent_space.py  latent_visualization.py  orchestrator.py  reconstruction.py  statistical.py  utils.py
generator/tests/: __init__.py  test_dataset.py  test_generator.py  test_label_space.py  test_setup.py  test_trainer.py  test_vae.py
moonboard_core/: .gitignore  README.md  __init__.py  board_config.py  data_processor.py  grade_encoder.py  grid_to_moves.py  pyproject.toml  setup.py
moonboard_core/tests/: __init__.py  test_board_config.py  test_data_processor.py  test_grade_encoder.py  test_grade_filtering.py  test_grid_builder.py  test_grid_to_moves.py  test_position_parser.py
neural-net/: .gitignore  AGENTS.md  config.yaml  main.py  requirements.txt  spec.md
neural-net/data/: README.md
neural-net/docs/: changelog.md
neural-net/src/: __init__.py  dataset.py  grade_encoder.py  grid_builder.py  models.py  position_parser.py  predictor.py  trainer.py
neural-net/tests/: test_data_processor.py  test_dataset.py  test_evaluator.py  test_grade_encoder.py  test_main.py
plans/: backend-plan.md  classifier-finding-fix-tasks.md  frontend-plan.md  generator-findings-opus.md  generator-grade-range-correctness-fix-plan.md  generator-moonboard-core-review-findings.md  generator-plan.md  memory.md  moonboard-core-functionality-review.md  moonboard-core-review-findings.md  structured-logging.md
prompts/: beta-classifier-plan.md  beta-generator.md  frontend-plan.md  gen-eval-plan.md  generator-plan.md  initial.md  plan.md  problem-data-endpoints-plan.md  solver-cli-plan.md  structured-logging.md
(+47 files in other folders)
