[project]
name = "moonboard_core"
version = "0.1.0"
description = "Shared utilities for Moonboard problem processing"
authors = [{name = "Moonboard Grader Team"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"moonboard_core" = "."}
packages = ["moonboard_core"]

